--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pytorch==1.1.0
-torchvision==0.3.0
-imgaug==0.3.0
-opencv-python
+torch>=2.0.0
+torchvision>=0.15.0
+opencv-python>=4.7.0
+tqdm>=4.65.0
+imgaug>=0.4.0
